--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
+clap_complete = "4.5"
 csv = "1.3"
 reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
 serde = { version = "1.0", features = ["derive"] }
