--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,19 @@
 name = "dsc"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+
+[package.metadata.dist]
+cargo-dist-version = "0.11.1"
+ci = "github"
+installers = ["shell"]
+targets = [
+  "x86_64-unknown-linux-gnu",
+  "aarch64-unknown-linux-gnu",
+  "x86_64-apple-darwin",
+  "aarch64-apple-darwin",
+  "x86_64-pc-windows-msvc",
+]
 
 [dependencies]
 anyhow = "1.0"
