--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ targets = [
 
 [dependencies]
 anyhow = "1.0"
+base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 clap_complete = "4.5"
